Bug #1926
closedlibresolv evades compiler warnings
100%
Description
Via a mechanism I haven't investigated, libresolv is built without cc -v, and thus with compiler warnings disabled. It is, thus, full of simple mistakes (missing includes, etc.).
Whatever bug is causing it to miss 'cc -v' (I'm guessing makefile include order) should be fixed, and the warnings that this then uncovers should also be fixed.
Updated by Rich Lowe almost 12 years ago
It's not evading them, it's just not specifying adding $(CCVERBOSE) to cflags when it, apparently, should. I'd thought that we were smarter about making it hard to avoid compiler warnings being enabled. Apparently not.
Updated by Rich Lowe over 11 years ago
The same is true of the DTrace tests (baddof, at least)
Updated by Milan Jurik over 11 years ago
libresolv is years-old, years-obsolete library, replaced by libresolv2. It stays only for applications built 10+ years ago, no new application should be using it.
Updated by Rich Lowe over 11 years ago
That doesn't remove the desire to have it stop making the kind of foolish mistakes that even simple compiler warnings being enabled would catch like, for eg, the missing #includes that caused me to notice this.
Updated by Electric Monk about 8 years ago
- Status changed from New to Closed
- % Done changed from 0 to 100
git commit bd0e95e605fff368075e869efe6d31ebe471ea49
commit bd0e95e605fff368075e869efe6d31ebe471ea49 Author: Gary Mills <gary_mills@fastmail.fm> Date: 2015-07-23T17:13:23.000Z 1926 libresolv evades compiler warnings Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Albert Lee <trisk@omniti.com> Approved by: Robert Mustacchi <rm@joyent.com>