1926 libresolv evades compiler warnings Reviewed by: Toomas Soome <tsoome@me.com> Reviewed by: Albert Lee <trisk@omniti.com> Approved by: Robert Mustacchi <rm@joyent.com>